--- a/css/style.css
+++ b/css/style.css
@@ -541,6 +541,160 @@ body{
 .totalScoreSection>span{
     font-weight: 600;
 }
+.alignItemCenter{
+    align-items: center;
+}
+.uploadFileContainer {
+    width: 100%;
+    max-width: 850px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    gap: 15px;
+    margin: auto;
+}
+.dragDropSection{
+    width: 100%;
+    min-height: 260px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border: dashed 2px #FFFFFF;
+    border-radius: 30px;
+    gap: 10px;
+}
+.fileUploadSection{
+    width: 100px;
+}
+.fileUploadSection>img{
+    width: 100%;
+}
+.fileUploadBtnSection{
+    width: 100%;
+    float: left;
+    font-size: 18px;
+    font-weight: 300;
+    color: #FFFFFF;
+    justify-content: center;
+}
+.fileUploadBtnSection>button{
+    font-size: 18px;
+    font-weight: 700;
+    color: #FFFFFF;
+    text-decoration: underline;
+    padding: 0;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+}
+.fileUploadBtnSection>p{
+    width: 100%;
+    font-size: 12px;
+    color: #BCBCBC;
+    margin: 0;
+    padding: 0;
+}
+.fileUploadProgressSection{
+    width: 100%;
+    border: solid 1px #2F3765;
+    border-radius: 12px;
+    padding: 12px;
+    display: flex;
+    align-items: start;
+    gap: 12px;
+}
+.fileUploadProgressContainer{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+.fileNameSection{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: start;
+}
+.fileDelete{
+    border: none;
+    background-color: transparent;
+    padding: 0;
+    cursor: pointer;
+}
+.fileName{
+    width: 100%;
+    font-size: 14px;
+    font-weight: 500;
+    color: #FFFFFF;
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+}
+.fileName>p{
+    width: 100%;
+    font-size: 12px;
+    color: #BCBCBC;
+    margin: 0;
+    padding: 0;
+}
+.progressSection{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+.progressSection>span{
+    font-size: 14px;
+    color: #BCBCBC;
+}
+.progressBar{
+    width: 100%;
+    height: 8px;
+    float: left;
+    background-color: #3E4568;
+    border-radius: 20px;
+    overflow: hidden;
+    margin: 10px 0 0;
+}
+.progressBar>span{
+    height: 100%;
+    float: left;
+    border-radius: 20px;
+    background-color: #FF8F39;
+}
+.smallIcon{
+    width: 30px;
+}
+.fileUploadMessageSection{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+.fileUploadMessage{
+    width: 100%;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    gap: 5px;
+    font-size: 14px;
+    font-weight: 400;
+    color: #FFFFFF;
+}
+.fileUploadMessage>img{
+    width: 24px;
+}
+.nextBtnSection {
+    width: 100%;
+    display: flex;
+    justify-content: end;
+}
+
+
+
 
 
 
