--- a/css/style.css
+++ b/css/style.css
@@ -572,7 +572,7 @@ body{
     gap: 10px;
 }
 .fileUploadSection{
-    width: 100px;
+    width: 70px;
 }
 .fileUploadSection>img{
     width: 100%;
@@ -809,15 +809,84 @@ body{
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
+.blurOption{
+    background: #000936;
+    filter: blur(5px);
+}
+.modalBackgroundSection {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    z-index: 999;
+    top: 0;
+    padding: 10px;
+}
+.modalSection {
+    width: 100%;
+    max-width: 470px;
+    min-height: 270px;
+    border-radius: 15px;
+    padding: 22px;
+    background-color: #000F6F;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+.modalClose{
+    width: 100%;
+    display: flex;
+    justify-content: end;
+}
+.modalClose>button{
+    border: none;
+    background-color: transparent;
+    padding: 0;
+    cursor: pointer;
+}
+.modalClose>button>img{
+    width: 20px;
+}
+.modalContentSection{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+}
+.iconSection{
+    width: 70px;
+    display: flex;
+}
+.iconSection>img{
+    width: 100%;
+}
+.modalText{
+    width: auto;
+    font-size: 22px;
+    font-weight: 400;
+    color: #FFFFFF;
+    text-align: center;
+}
+.iconRotate{
+    width: 80px;
+}
+.iconRotate>img{
+    -webkit-animation:spin 8s linear infinite;
+    -moz-animation:spin 8s linear infinite;
+    animation:spin 8s linear infinite;
+}
+@-moz-keyframes spin { 
+    100% { -moz-transform: rotate(360deg); } 
+}
+@-webkit-keyframes spin { 
+    100% { -webkit-transform: rotate(360deg); } 
+}
+@keyframes spin { 
+    100% { 
+        -webkit-transform: rotate(360deg); 
+        transform:rotate(360deg); 
+    } 
+}
